added hte Player Profile section and adjusted to fit the overall colors and fonts

--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
     <div id="landing-section"></div>
     <div id="about-section"></div>
     <div id="player-finder-section"></div>
+    <div id="player-profile-section"></div>
     
     <!-- Cursor selector (stays in main file) -->
     <div class="cursor-menu">
