--- a/website/index.html
+++ b/website/index.html
@@ -6,8 +6,11 @@
     <title>Tennis for Dummies</title>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Source+Sans+Pro:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
+
     <style>
       /* Animation delays */
       .animation-delay-200 { animation-delay: 0.2s; }
@@ -35,6 +38,7 @@
     <!-- Component containers -->
     <div id="landing-section"></div>
     <div id="about-section"></div>
+    <div id="players-overview"></div>
     <div id="player-finder-section"></div>
     <div id="player-profile-section"></div>
     
